<resources>
    <string name="app_name">CafeterosApp</string>
    <string name="cafeteros_name">Cafeteros</string>
    <string name="cafeteros_slogan">Impulsando la caficultura colombiana</string>
    <string name="cafeteros_login">Login</string>
    <string name="cafeteros_description_logo">CAFETEROS application logo</string>
    <string name="cafeteros_description_btlogin">go to test login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>