<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imCafeterosLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/cafeteros_description_logo"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo_cafeteros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvCafeterosName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imCafeterosLogo"
        android:text="@string/cafeteros_name"
        android:textSize="@dimen/title"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/cafeteros_general_text"/>

    <View
        android:id="@+id/vCafeterosDivider"
        android:layout_width="350dp"
        android:layout_height="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCafeterosName"
        android:background="@color/cafeteros_red"/>

    <TextView
        android:id="@+id/tvCafeterosSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vCafeterosDivider"
        android:text="@string/cafeteros_slogan"
        android:textSize="@dimen/title"
        android:textColor="@color/cafeteros_general_text"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/tvCafeterosSlogan"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/cafeteros_green"
        android:textSize="@dimen/title"
        android:contentDescription="@string/cafeteros_description_btlogin"
        android:text="@string/cafeteros_login"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>