<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".login_view.LoginActivity">

    <ImageView
        android:id="@+id/imCafeterosLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/cafeteros_description_logo"
        android:src="@drawable/logo_cafeteros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCafeterosName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cafeteros_name"
        android:textAllCaps="true"
        android:textColor="@color/cafeteros_general_text"
        android:textSize="@dimen/title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imCafeterosLogo" />

    <View
        android:id="@+id/vCafeterosDivider"
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:background="@color/cafeteros_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCafeterosName" />

    <TextView
        android:id="@+id/tvCafeterosSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cafeteros_slogan"
        android:textColor="@color/cafeteros_general_text"
        android:textSize="@dimen/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vCafeterosDivider" />

    <TextView
        android:id="@+id/tvIdNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Numero de Cedula"
        android:textColor="@color/cafeteros_general_text"
        android:textSize="@dimen/subtitle"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCafeterosSlogan" />

    <EditText
        android:id="@+id/etIdNumber"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@color/cafeteros_background"
        android:hint="Ingrese su numero de cedula"
        android:inputType="number"
        android:padding="8dp"
        android:textColor="@color/cafeteros_general_text"
        android:textColorHint="@color/cafeteros_general_text"
        android:textSize="@dimen/subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIdNumber" />

    <TextView
        android:id="@+id/tvIdPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Contraseña"
        android:textColor="@color/cafeteros_general_text"
        android:textSize="@dimen/subtitle"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etIdNumber" />

    <EditText
        android:id="@+id/etIdPassword"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@color/cafeteros_background"
        android:hint="Ingrese su contraseña"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/cafeteros_general_text"
        android:textColorHint="@color/cafeteros_general_text"
        android:textSize="@dimen/subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIdPassword" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="Iniciar"
        android:textSize="@dimen/title"
        android:backgroundTint="@color/cafeteros_green"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etIdPassword"/>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Olvide mi contraseña"
        android:textColor="@color/cafeteros_green"
        android:textSize="@dimen/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btLogin" />

    <Button
        android:id="@+id/btCreateAccount"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="Crear una cuenta"
        android:textSize="@dimen/title"
        android:backgroundTint="@color/cafeteros_primary"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textColor="@color/cafeteros_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>